# ChessMG

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENCE  MANIFEST.in  Makefile  Manifest.in  PACKAGE_SUMMARY.md  README.md  TABLEBASE_README.md  TABLEBASE_STATUS.md  __init__.py  benchmark_performance.py  cmgtb  example_tablebase_usage.py  generate_tablebase.py  probe_tablebase.py  pyproject.toml  search_tablebase.py  setup.py  simple.py  test.py  test_indexing_storage.py  test_search_example.py  test_special_cases.py  test_tablebase.py  test_tablebase_core.py  test_tablebase_standalone.py
.github/workflows/: ci.yml  wheels.yml
chessmg/: Makefile  README.md  __init__.py  libchessmg.pyx  position.py
chessmg/libcmg/: Makefile  libcmg.cpp  libcmg.h  libiter.h  libsurge.cpp  libsurge.h
chessmg/libcmg/tests/: test_iterator.cpp  test_libcmg.cpp  test_libsurge.cpp  test_libsurge_multithreading.cpp  test_threading.cpp  threading1.cpp
chessmg/tablebase/: __init__.py  generator.py  indexing.py  probe.py  retrograde.py
docs/: ARCHITECTURE.md  HELPMATE_CLARIFICATION.md  PERFORMANCE_AND_CAPTURES.md  SPECIAL_CASES_HANDLING.md  TABLEBASE_IMPLEMENTATION.md
examples/: example_new_api.py  iterator.py  simple.py
include/: libcmg.h
pycmg/: Makefile  __init__.py  libpycmg.pyx
pycmg/libcmg/: Makefile  libcmg.cpp  libcmg.h  libsurge.cpp  libsurge.h
pycmg/libcmg/tests/: test_libcmg.cpp
src/: Makefile  libcmg.cpp  libpycmg.pyx  libsurge.cpp
src/libcmg/: libsurge.h
tablebase/: README.md  fast_helpers.py  generator.py  indexing.py  probe.py  retrograde.py  retrograde_fast.py  retrograde_helpmate.py  storage.py
tb/: KPvK.cmgtb  KQvK.cmgtb
tests/: benchmark_average.py  test.py  test_average.py  test_correctness.py  test_new_api.py  test_perft.py  test_perft_start_fen.py  test_set_position.py  testdata.json
