[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "Cython>=0.29",
    "numpy>=1.19",
]
build-backend = "setuptools.build_meta"

[project]
name = "chessmg"
version = "0.5.0"
description = "High-performance chess move generation library with Python bindings"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Oliver Sick", email = "oliver.sick@gmail.com"}
]
keywords = ["chess", "move generation", "perft", "bitboard", "engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.950",
    "pytest-cov>=3.0",
]

[project.urls]
Homepage = "https://github.com/osick/ChessMG"
Documentation = "https://github.com/osick/ChessMG/tree/main/docs"
Repository = "https://github.com/osick/ChessMG"
"Bug Tracker" = "https://github.com/osick/ChessMG/issues"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux*"
# Portable binaries: no -march=native in redistributable wheels
environment = { MARCHFLAG = "" }
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
test-command = "python -c \"import chessmg; assert chessmg.ChessPosition().perft(4) == 197281; print('wheel ok:', chessmg.__version__)\""

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
